Summary of changes for version 4.3.0 are below
   * Implement default for non ascii characters
   * Removed poll requirement for MHD
   * Updated translations
   * Revise directory structure, autotools, makefile
   * Revised tesing for travis
   * Updated MMAL camera
   * Optional processing for OMX
   * Fix movie start times
   * Optional h264_v4l2m2m
   * set fps on v4l2 devices.
   * Option for videoio.h
   * JPEG code clean up
   * Fix substrem processing for non modulo 16
   * Ignore invalid data sent from cameras.
   * Adjust the netcam handler wait and processing
   * Answer incorrect web requests.
   * Implement delay upon reconnect
   * Fix filetype specified for snapshots
   * Enhancements the service file.
   * Output to log the ext pipe command
   * Documentation fix for minimum_frame_time
   * Documentation clarification for lightswitch
   * Documentation fix for colon versus semi-colon
   * Fix vbr calculations for high frame rates
Summary of changes for version 4.2.2 are below
   * Update version number to 4.2.2/Changelog
   * Resolve compile problem for OpenBSD
   * Resolve compiler warnings for 18.10
   * Guide/Manual updates
   * Add the quit/end webcontrol actions to interface 0
   * Set the stream index on passthrough
   * Revise the webcontrol stream rate
   * Answer webcontrol stream only after completing first loop
   * Save the preview images when triggering emulate
   * Fix startup problem when using track_type 4
   * Fix hostname for webcontrol when using IPV6
Summary of changes for version 4.2.1 are below
   * Update version number to 4.2.1 / Changelog
   * Report to log options included in build
   * Add log messages on database actions(tosiara)
   * Revise log messages of port used for stream
   * Revise log messages when using v4l2 via netcam
   * Fix null terminator on EXIF of jpgs(tosiara)
   * Fix build with static libs for webp(Fabrice)
   * Guide update for initial setup.
   * Prevent webcontrol update of movie_passthrough